force-app/main/default/objects/Payments__c/Payments__c.object-meta.xml
<CustomObject>
    <label>Dados de Pagamento</label>
    <nameField>
        <label>Nome de Dados de Pagamento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dados de Pagamento</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>