force-app/main/default/objects/Payments__c/fields/authId__c.field-meta.xml
<CustomField>
    <fullName>authId__c</fullName>
    <label>authId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>