force-app/main/default/objects/Payments__c/fields/cardBrand__c.field-meta.xml
<CustomField>
    <fullName>cardBrand__c</fullName>
    <label>Bandeira do Cartão</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VISA</fullName>
            </value>
            <value>
                <fullName>MASTERCARD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>