force-app/main/default/objects/Payments__c/fields/cardHoldersName__c.field-meta.xml
<CustomField>
    <fullName>cardHoldersName__c</fullName>
    <label>Nome do Titular</label>
    <length>255</length>
    <type>Text</type>
</CustomField>