force-app/main/default/objects/Payments__c/fields/dueDate__c.field-meta.xml
<CustomField>
    <fullName>dueDate__c</fullName>
    <label>Data de Vencimento</label>
    <type>Date</type>
</CustomField>