force-app/main/default/objects/Payments__c/fields/firstDigits__c.field-meta.xml
<CustomField>
    <fullName>firstDigits__c</fullName>
    <label>Primeiros Digitos Cartão</label>
    <length>255</length>
    <type>Text</type>
</CustomField>