force-app/main/default/objects/Payments__c/fields/installments__c.field-meta.xml
<CustomField>
    <fullName>installments__c</fullName>
    <label>Parcelas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>