force-app/main/default/objects/Payments__c/fields/interestAmount__c.field-meta.xml
<CustomField>
    <fullName>interestAmount__c</fullName>
    <label>Juros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>