force-app/main/default/objects/Payments__c/fields/interestRate__c.field-meta.xml
<CustomField>
    <fullName>interestRate__c</fullName>
    <label>Taxa de Juros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>