force-app/main/default/objects/Payments__c/fields/lastDigits__c.field-meta.xml
<CustomField>
    <fullName>lastDigits__c</fullName>
    <label>Últimos dígitos Cartão</label>
    <length>255</length>
    <type>Text</type>
</CustomField>