force-app/main/default/objects/Payments__c/fields/originPaymentId__c.field-meta.xml
<CustomField>
    <fullName>originPaymentId__c</fullName>
    <externalId>true</externalId>
    <label>Id Original de Pagamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>