force-app/main/default/objects/Payments__c/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <label>Pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Dados de Pagamento</relationshipLabel>
    <relationshipName>Dados_de_Pagamento</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>