force-app/main/default/objects/Payments__c/fields/redemptionCode__c.field-meta.xml
<CustomField>
    <fullName>redemptionCode__c</fullName>
    <label>Voucher</label>
    <length>255</length>
    <type>Text</type>
</CustomField>