force-app/main/default/objects/Payments__c/fields/tid__c.field-meta.xml
<CustomField>
    <fullName>tid__c</fullName>
    <label>tid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>